# otus_dz10_bulkmt

./: .gitignore  .travis.yml  CMakeLists.txt  bulkmt.cpp  bulkmt2.cpp  testfile  vtable_data
